2022-11-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3: Mauna Loa';git push
	git tag -a 5.1.3 -m 'ncremap automagical hrz_mrv determination/usage';git push --tags

	* NCO 5.1.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha02: Thai Massage';git push
	git tag -a 5.1.3-alpha02 -m 'ncremap automagical hrz_mrv determination/usage';git push --tags

2022-11-25  Charlie Zender  <zender@uci.edu>

	* Realize that 20221108 change in 5.1.2 broke nco_ntp_vrt() for vrt_mrv data like eamxx
	because datasets were no longer permuted to hrz_mrv that nco_ntp_vrt() assumed

	* nco_ntp_vrt() use flg_hrz_mrv, appears to work

	* nco_ntp_vrt() add stubs to automagically determine flg_hrz_mrv/flr_vrt_mrv

	* nco_map_rgr() assign col_nm_in to ncol_p not ncol_d

2022-11-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha01: Tavern House';git push
	git tag -a 5.1.3-alpha01 -m 'Functionally identical to 5.1.2';git push --tags

	* Simplify vertical interpolation if input vertical dimension is most-rapidly-varying (--vrt_mrv)

2022-11-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2: Guerilla Poetry';git push
	git tag -a 5.1.2 -m 'ncclimo/ncremap: -P eamxx, --npo, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags

	* Remove unnecessary assert() in nco_cnk_sz_set_trv() that prevents SCREAM regrid

	* Update package availability on homepage index.shtml

2022-11-16  Charlie Zender  <zender@uci.edu>

	* ncremap pdq_opt includes CMOR dimensions time, olevhalf for MPAS output

2022-11-13  Charlie Zender  <zender@uci.edu>

	* ncks fix accidental assignment of fl_out_fmt to NC_FORMAT_64BIT_OFFSET in nco_prn.c

2022-11-09  Charlie Zender  <zender@uci.edu>

	* Document --ps_nm, --vrt_in in nco.texi

	* Add new options to usage and man pages
