@@ -1,5 +1,9 @@
 2022-11-28  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.1.4-alpha01 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha01: Seal Bottling';git push
+	git tag -a 5.1.4-alpha01 -m 'Functionally identical to 5.1.3';git push --tags
+
 	* NCO 5.1.3 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.3: Mauna Loa';git push
 	git tag -a 5.1.3 -m 'ncremap automagical hrz_mrv determination/usage';git push --tags
